base/apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: backend-dep
  type: ClusterIP
