base/apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-be
  annotations:
    # ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:

  - host: the-host-value
    http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-svc
            port:
              number: 80
